--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>to-do-list</title>
   </head>
   <body>
+      <h3 style="margin: 0;">Поки що без стилів!</h3>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
